...
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="350dp">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/favoriteTV"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red_200"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            app:elevation="5dp"
                            app:fabCustomSize="50dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.954"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/lastair"
                            app:layout_constraintVertical_bias="0.805" />

                        <ImageView
                            android:id="@+id/imagepicMovie"
                            android:layout_width="150dp"
                            android:layout_height="200dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.065"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.333" />


                        <TextView
                            android:id="@+id/originalTitle"
                            style="@style/titleMovie"
                            android:layout_width="213dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="125dp"
                            android:layout_marginTop="36dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.99"
                            app:layout_constraintStart_toEndOf="@+id/imagepicMovie"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/genreDetailmovie"
                            style="@style/genreMovie"
                            android:layout_width="213dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toEndOf="@+id/imagepicMovie"
                            app:layout_constraintTop_toBottomOf="@+id/originalTitle"
                            app:layout_constraintVertical_bias="0.0" />

                        <TextView
                            android:id="@+id/releaseMovie"
                            style="@style/releaseMovie"
                            android:layout_width="213dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
...
