<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/FavoriteMenu"
        android:contentDescription="Favorite Menu"
        android:icon="@drawable/ic_baseline_favorite_24_2"
        android:title="Favorite Menu"
        app:showAsAction="always" />
</menu>