...

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/favoriteMovie"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/red_200"
                            android:src="@drawable/ic_baseline_favorite_border_24"
                            app:elevation="5dp"
                            app:fabCustomSize="50dp"
...
